--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ title: MSTC2019 Paradigm
                                     <img src="assets/img/speakers/utm.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo">
                                     <p style="clear:both;">
                                         <h3>
-                                            <font size="5"> Topic: Keynote </font>
+                                            <font size="5"> Topic: Medical Technology </font>
                                         </h3>
                                         <p>Dr. Jasmine Hau Yuan Wen is a research fellow and the head of Cardiac Informatics Cluster
                                             at IJN-UTM Cardiovascular Engineering Centre, Universiti Teknologi Malaysia. She
@@ -618,7 +618,7 @@ title: MSTC2019 Paradigm
                                     <img src="assets/img/speakers/invoke.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo">
                                     <p style="clear:both;">
                                         <h3>
-                                            <font size="5"> Topic: Keynote </font>
+                                            <font size="5"> Topic: Data Analytics </font>
                                         </h3>
                                         <p>Koh Wyhow is a data analytics professional with an excess of 5 years of experience, who obtained his Bachelor of Science in Mathematics from NUS. His work involves providing advanced analytics and business intelligence solutions for airlines, media, property and FMCG industries using various data science techniques such as Decision Trees, Random Forest and many more. </p>
 
