added more speakers

--- a/index.html
+++ b/index.html
@@ -304,6 +304,34 @@ title: MSTC2019 Paradigm
                     </a>
 
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <a class="speakers-link" data-toggle="modal" data-target="#Moonyati">
+                        <div class="speaker_box">
+                            <div class="speaker_img">
+                                <img src="assets/img/speakers/unknown.jpg" alt="speaker name">
+                                <div class="info_box">
+                                    <h5 class="name">Dr. Moonyati Yatid</h5>
+                                    <p class="position"> ISIS Malaysia <br> -Senior Analyst <br> </p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a class="speakers-link" data-toggle="modal" data-target="#Clarence">
+                        <div class="speaker_box">
+                            <div class="speaker_img">
+                                <img src="assets/img/speakers/unknown.jpg" alt="speaker name">
+                                <div class="info_box">
+                                    <h5 class="name">Clarence Chan</h5>
+                                    <p class="position"> PWC <br> -Associate Director, Risk Assurance <br> </p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
                 <!--
 <div class="col-md-3 col-sm-6">
     <a class="speakers-link" data-toggle="modal" data-target="#Pedro">
@@ -636,7 +664,7 @@ title: MSTC2019 Paradigm
 
 
 
-        <div class="portfolio-modal modal fade" id="Pedro" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="Moonyati" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="close-modal" data-dismiss="modal">
@@ -650,23 +678,20 @@ title: MSTC2019 Paradigm
                             <div class="col-lg-8 col-lg-offset-2">
                                 <div class="modal-body">
                                     <h2>
-                                        <font size="7">Pedro Uria Recio</font>
+                                        <font size="7">Dr. Moonyati Yatid</font>
                                     </h2>
                                     <hr class="star-primary">
-                                    <img src="assets/img/speakers/pedrouriarecio.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Pedro Uria Recio">
-                                    <img src="assets/img/speakers/axiata.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Axiata">
+                                    <img src="assets/img/speakers/unknown.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Dr. Moonyati">
+                                    <img src="assets/img/speakers/isismy.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Axiata">
                                     <p style="clear:both;">
                                         <h3>
-                                            <font size="5"> Topic: Keynote </font>
+                                            <font size="5"> Topic: Rise of Machines </font>
                                         </h3>
                                         <p>
-                                            Pedro Uria Recio is a senior marketing leader, highly experienced in data analytics, AI, product marketing and P&L management. At Axiata, he is the Group’s head of analytics with focus on marketing and is responsible for below-the-line marketing. He has worked in many countries such as USA, China and France. He obtained his MBA From Chicago Booth and is currently pursuing a pro-degree in fintech by Barclays. He is enthusiastic about coaching and developing people and has built many leading high-performing teams from scratch.
+                                            Dr Moonyati is Senior Analyst in the Technology, Innovation, Environment and Sustainability Programme of the Institute of Strategic and International Studies (ISIS) Malaysia. Her research focuses on issues related to technological advancements and innovation, with interests on digital economy, Artificial Intelligence (A.I), Internet of Things (IoT) and SME development. Her past projects include consultation work for the World Bank Group on the innovation terrain in Malaysia. Previously, she drove efforts on organisational improvements in the oil and gas industry, which comprises change management, resource optimisation and business improvement initiatives. She holds a Ph.D. in Human-Computer Interaction from University of Sydney, Australia where her works focused on human behaviours and their correlations with collaborative software and hardware tools. She obtained her bachelor’s degree of Engineering in Design and Information Sciences from Wakayama University, Japan, with a dissertation on integrating culture in designing groupware.
                                         </p>
 
-                                        <p>&#8226; Implemented analytical models in multiple countries to study customer behaviour. </p>
-                                        <p>&#8226; Created credit scoring models with telecom data, which are used by 2 external banks and new micro-finance businesses. </p>
-                                        <p>&#8226; Developed a chatbot for customer service operating in four countries. </p>
-                                        <p>&#8226; Tripled sales in Indonesia to USD $9m</p>
+                                        
 
 
                                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -678,7 +703,7 @@ title: MSTC2019 Paradigm
             </div>
         </div>
 
-        <div class="portfolio-modal modal fade" id="FongTuan" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="Clarence" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="close-modal" data-dismiss="modal">
@@ -692,22 +717,18 @@ title: MSTC2019 Paradigm
                             <div class="col-lg-8 col-lg-offset-2">
                                 <div class="modal-body">
                                     <h2>
-                                        <font size="7">Chen Fong Tuan</font>
+                                        <font size="7">Clarence Chan</font>
                                     </h2>
                                     <hr class="star-primary">
-                                    <img src="assets/img/speakers/fongtuanchen.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Fong Tuan Chen">
+                                    <img src="assets/img/speakers/unknown.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Clarence Chan">
                                     <img src="assets/img/speakers/samsung.png" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo">
                                     <p style="clear:both;">
                                         <h3>
-                                            <font size="5"> Topic: Keynote </font>
+                                            <font size="5"> Topic: - </font>
                                         </h3>
-                                        <p>Chen Fong Tuan is The HR director at Samsung Electronics. His expertise in innovating dynamic people programs and initiatives to optimise employee experience has enabled all of his organisations to achieve targeted business objectives. He has managed the entire spectrum of HR in a multitude of portfolios whilst working in multiple industries such as utility, financial services, medical tech and real estate. He obtained his BEng from the University of Sussex and also obtained his MBA from the Charles Sturt University. </p>
+                                        <p>- </p>
 
-                                        <p>&#8226; Training and Productivity Manager for Coca Cola Malaysia</p>
-                                        <p>&#8226; Assistant VP,Head for Talent Management at OCBC Bank.</p>
-                                        <p>&#8226; Executive Vice President and Head for various sectors in Maybank </p>
-                                        <p>&#8226; Human Resource Director for B.Braun Group.</p>
-                                        <p>&#8226; Chief People Officer,Head for Mah Sing Group Berhad. </p>
+                                        
                                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                                 </div>
                             </div>
