--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ title: MSTC2019 Paradigm
                     <a class="speakers-link" data-toggle="modal" data-target="#DrJasmine">
                         <div class="speaker_box">
                             <div class="speaker_img">
-                                <img src="assets/img/speakers/drjasminehau.jpg" alt="speaker name">
+                                <img src="assets/img/speakers/drjasminehau.png" alt="speaker name">
                                 <div class="info_box">
                                     <h5 class="name">Dr. Jasmine Hau Yuan Wen</h5>
                                     <p class="position">Universiti Teknologi Malaysia <br> -Senior lecturer/Research fellow</p>
@@ -600,16 +600,13 @@ title: MSTC2019 Paradigm
                                         <font size="6"> Dr. Jasmine Hau Yuan Wen</font>
                                     </h2>
                                     <hr class="star-primary">
-                                    <img src="assets/img/speakers/drjasminehau.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                    <img src="assets/img/speakers/drjasminehau.png" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Dr Hau">
                                     <img src="assets/img/speakers/utm.jpg" style="float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo">
                                     <p style="clear:both;">
                                         <h3>
                                             <font size="5"> Topic: Medical Technology </font>
                                         </h3>
-                                        <p>Dr. Jasmine Hau Yuan Wen is a research fellow and the head of Cardiac Informatics Cluster
-                                            at IJN-UTM Cardiovascular Engineering Centre, Universiti Teknologi Malaysia. She
-                                            is also a senior lecturer at the Faculty of Biosciences and Medical Engineering,
-                                            Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree in electrical engineering from Universiti Teknologi Malaysia in 2009 and 2005, respectively. Dr. Hau's research interests include various fields such as processors, data security application, biomedical applications and many others.</p>
+                                        <p>Dr. Hau Yuan Wen is a research fellow and the head of Cardiac Informatics Cluster at UTM-IJN Cardiovascular Engineering Centre, also a senior lecturer at the School of Biomedical Engineering and Health Sciences, Faculty of Engineering, Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree in electrical engineering from Universiti Teknologi Malaysia in 2009 and 2005, respectively. Dr. Hau's research interests are in the design of multi-processor systems-on-chip (MPSoC) /networks-on-chip (NoC), from high level algorithm modelling until low level of processing architecture design, as well as field programmable gate array (FPGA) implementation. From there her research interests have spread into the field of cryptographic and data security application, biomedical application such as arrhythmia  classification and medical imaging processing, as well as ADHD/autism assessment. She has published more than 50 papers in peer reviewed international journals and conferences, and several book chapters. She has won many best invention awards in design competition, as well as best paper publication award in many international conferences. She is also a member of the IEEE.</p>
 
 
                                         <p> &#8226; Over 50 published papers </p>
