--- a/ourTeam.html
+++ b/ourTeam.html
@@ -434,7 +434,7 @@
 
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="imran" data-toggle="modal" data-target="#memberModal" onClick="setModal(6)">
+                                <img class="btn-circle-member" src="assets/img/team/imran_head.jpg" id="imran" data-toggle="modal" data-target="#memberModal" onClick="setModal(6)">
                                 <p>Imran</p>
                             </div>
 
