--- a/ourTeam.html
+++ b/ourTeam.html
@@ -511,7 +511,7 @@
 
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="shujaak" data-toggle="modal" data-target="#memberModal" onClick="setModal(9)">
+                                <img class="btn-circle-member" src="assets/img/team/shu_head.jpeg" id="shujaak" data-toggle="modal" data-target="#memberModal" onClick="setModal(9)">
                                 <p>Shu Jaak Ooi</p>
                             </div>
 
@@ -647,7 +647,7 @@
                         </div>
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col" style="width: 50%; height:auto">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="hoyen" data-toggle="modal" data-target="#memberModal" onClick="setModal(20)">
+                                <img class="btn-circle-member" src="assets/img/team/hoyen_head.jpg" id="hoyen" data-toggle="modal" data-target="#memberModal" onClick="setModal(20)">
                                 <p>Toh Ho Yen</p>
                             </div>
                         </div>
@@ -845,7 +845,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
                     <p>
-                        Our team loves diversity and accepts individual members from different background. With 30 members from various education and functional backgrounds, we together unlock the value of diversity in team, which improves our team performance and team satisfaction.
+                        Our team loves diversity and accepts individual members from different background. With 31 members from various education and functional backgrounds, we together unlock the value of diversity in team, which improves our team performance and team satisfaction.
                     </p>
                 </div>
 
